--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -14,5 +14,6 @@ a:hover {
     background-color: white; 
     position: relative;
     margin-left: 2px;
+    margin-top: 100px;
     border: 0.6px solid transparent;
 }
